# 1

./: .gitignore  Makefile  README.md  author.txt  pyproject.toml
task_1/: main.py  task1_run.py  test_task1.py
task_2/: task2_run.py  test_task2.py
task_2/fixture/: result.json
task_3/: main.py  task3_run.py  test_task3.py
task_4/: test_task4.py
